syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.edu.ufcg.middleware.proto.order";

service OrderService {
    rpc Save(OrderSaveRequest) returns (OrderSaveResponse) {}
    rpc ListByUserId(ListUserOrdersRequest) returns (ListUserOrdersResponse) {}
}

// Save
message OrderSaveRequest {
    message Address {
        string street = 1;
        string city = 2;
        string state = 3;
        int64 number = 4;
    }

    message Product {
        int64 id = 1;
        int64 quantity = 2;
    }

    message User {
        int64 id = 1;
        string email = 2;
        string name = 3;
        Address address = 4;
    }

    message Company {
        int64 id = 1;
        string name = 2;
        string email = 3;
        Address address = 4;
    }

    User user = 1;
    Company company = 2;
    repeated Product products = 3;
}

message OrderSaveResponse {
    message Data {
        message Product {
            string name = 1;
            double price = 2;
            int64 quantity = 3;
        }

        string id = 1;
        int64 user_id = 2;
        int64 company_id = 3;
        repeated Product products = 4;
    }

    int32 status = 1;
    Data data = 2;
}

// List User Orders
message ListUserOrdersRequest {
    int32 user_id = 1;
}

message ListUserOrdersResponse {
    message Product {
        int32 id = 1;
        string name = 2;
        string description = 3;
        double price = 4;
        int64 quantity = 5;
    }

    message Order {
        string id = 1;
        string date = 2;
        repeated Product products = 3;
    }

    repeated Order orders = 1;
}